# pyspark

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  run_job.py
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
conf/: log4j.properties
docs/: 2_2_casting_and_nulls.md  2_3_complex_types.md  3_2_1_broadcast_join.md  3_2_join_strategies.md  ENV_SETUP.md
docs/01_fundamentals/: 1_1_spark_core.md  1_2_data_ingestion.md  1_3_understanding_rdds.md
docs/02_dataframe_operations/: 2_1_basic_operations.md  2_3_1_explode_vs_pivot.md
docs/03_advanced_operations/: 3_1_aggregation_and_grouping.md  3_3_data_storage_formats.md  3_3_supplement_predicate_pushdown.md
docs/04_data_integration/: 4_1_2_data_validation.md  4_1_3_jdbc_limitations  4_1_spark_jdbc_fundamentals.md  4_1_supplement_data_consistency.md  4_2_data_quality_verification.md  4_3_window_functions_ranking.md  4_4_advanced_window_frames.md  4_5_udf_performance_and_alternatives.md  4_6_time_series_mastery.md
docs/05_ui_data_skew/: 5_1_spark_ui_fundamentals.md  5_2_identifying_data_skew.md  5_2_supplement_memory_and_spill.md  5_3_join_skew_analysis.md  5_4_salting_technique.md
docs/06_pipeline/: 6_1_project_orchestration.md  6_2_data_quality_validation.md  6_3_data_persistence_strategy.md
docs/07_spark_sql/: 7_1_spark_sql_fundamentals.md  7_2_complex_logic_in_sql.md  7_3_window_function.md  7_4_integrating_sparksql_into_data_pipelines.md
sql/init/: 01_init_maintenance.sql
src/: run_job.py
src/config/: settings.py
(+31 files in other folders)
