[project]
name = "pyspark_learning"
version = "0.1.0"
description = ""
authors = [
    {name = "chgwyellow",email = "dinnis1107@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "polars (>=1.37.1,<2.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "pyarrow (>=23.0.0,<24.0.0)",
    "pyspark (>=3.5.0,<4.0.0)",
    "setuptools (>=80.10.2,<81.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "findspark (>=2.0.1,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
